--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 absl-py==2.1.0
 aiohttp==3.9.5
 aiosignal==1.3.1
+altair==5.5.0
+annotated-types==0.7.0
 anyio==4.3.0
 appnope==0.1.4
 argon2-cffi==23.1.0
@@ -13,9 +15,11 @@ attrs==23.2.0
 Babel==2.14.0
 beautifulsoup4==4.12.3
 bleach==6.1.0
+blinker==1.9.0
 cachetools==5.3.3
 certifi==2024.2.2
 cffi==1.16.0
+cfgv==3.4.0
 charset-normalizer==3.3.2
 click==8.1.7
 comm==0.2.1
@@ -24,6 +28,9 @@ debugpy==1.8.1
 decorator==5.1.1
 defusedxml==0.7.1
 dill==0.3.8
+distlib==0.3.9
+distro==1.9.0
+docstring_parser==0.16
 et-xmlfile==1.1.0
 evaluate==0.4.1
 executing==2.0.1
@@ -34,6 +41,8 @@ fqdn==1.5.1
 frozenlist==1.4.1
 fsspec==2024.3.1
 gast==0.5.4
+gitdb==4.0.11
+GitPython==3.1.43
 google-api-core==2.18.0
 google-auth==2.29.0
 google-auth-oauthlib==1.2.0
@@ -51,13 +60,17 @@ h5py==3.11.0
 httpcore==1.0.4
 httpx==0.27.0
 huggingface-hub==0.22.2
+identify==2.6.3
 idna==3.6
+iniconfig==2.0.0
+instructor==1.3.4
 ipykernel==6.29.3
 ipython==8.22.2
 ipywidgets==8.1.2
 isoduration==20.11.0
 jedi==0.19.1
 Jinja2==3.1.3
+jiter==0.4.2
 joblib==1.4.0
 json5==0.9.20
 jsonpointer==2.4
@@ -78,6 +91,8 @@ jupyterlab_widgets==3.0.10
 keras==3.2.1
 lexrank==0.1.0
 libclang==18.1.1
+linkedin-api==2.3.1
+lxml==5.3.0
 Markdown==3.6
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
@@ -88,15 +103,19 @@ ml-dtypes==0.3.2
 multidict==6.0.5
 multiprocess==0.70.16
 namex==0.0.8
+narwhals==1.17.0
 nbclient==0.9.0
 nbconvert==7.16.1
 nbformat==5.9.2
 nest-asyncio==1.6.0
+newsapi-python==0.2.7
 nltk==3.8.1
+nodeenv==1.9.1
 notebook==7.1.1
 notebook_shim==0.2.4
 numpy==1.26.4
 oauthlib==3.2.2
+openai==1.57.2
 openpyxl==3.1.3
 opt-einsum==3.3.0
 optree==0.11.0
@@ -113,6 +132,8 @@ pillow==10.3.0
 pip-system-certs==4.0
 platformdirs==4.2.0
 plotly==5.20.0
+pluggy==1.5.0
+pre_commit==4.0.1
 prometheus_client==0.20.0
 prompt-toolkit==3.0.43
 proto-plus==1.23.0
@@ -125,10 +146,15 @@ pyarrow-hotfix==0.6
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
 pycparser==2.21
+pydantic==2.9.2
+pydantic_core==2.23.4
+pydeck==0.9.1
 Pygments==2.17.2
 pyrsistent==0.20.0
 PySocks==1.7.1
+pytest==8.3.4
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 python-json-logger==2.0.7
 pytz==2024.1
 PyYAML==6.0.1
@@ -137,7 +163,7 @@ qtconsole==5.5.1
 QtPy==2.4.1
 referencing==0.33.0
 regex==2024.4.16
-requests==2.31.0
+requests==2.32.3
 requests-oauthlib==2.0.0
 responses==0.18.0
 rfc3339-validator==0.1.4
@@ -151,13 +177,18 @@ scipy==1.13.0
 selenium==4.19.0
 Send2Trash==1.8.2
 setuptools==69.5.1
+shellingham==1.5.4
 six==1.16.0
+smmap==5.0.1
 sniffio==1.3.1
 sortedcontainers==2.4.0
 soupsieve==2.5
 stack-data==0.6.3
+streamlit==1.40.0
 StrEnum==0.4.15
 summa==1.2.0
+swarm @ git+https://github.com/openai/swarm.git@9db581cecaacea0d46a933d6453c312b034dbf47
+tavily-python==0.5.0
 tenacity==8.2.3
 tensorboard==2.16.2
 tensorboard-data-server==0.7.2
@@ -165,14 +196,17 @@ tensorflow==2.16.1
 termcolor==2.4.0
 terminado==0.18.0
 tf_keras==2.16.0
+tiktoken==0.8.0
 tinycss2==1.2.1
 tokenizers==0.19.1
+toml==0.10.2
 tornado==6.4
 tqdm==4.66.2
 traitlets==5.14.1
 transformers==4.40.1
 trio==0.25.0
 trio-websocket==0.11.1
+typer==0.15.1
 types-python-dateutil==2.8.19.20240106
 typing_extensions==4.11.0
 tzdata==2024.1
@@ -180,6 +214,7 @@ uri-template==1.3.0
 uritools==4.0.2
 urlextract==1.9.0
 urllib3==2.2.1
+virtualenv==20.28.0
 wcwidth==0.2.13
 webcolors==1.13
 webencodings==0.5.1
@@ -191,7 +226,3 @@ wrapt==1.16.0
 wsproto==1.2.0
 xxhash==3.4.1
 yarl==1.9.4
-streamlit==1.40.0
-python-dotenv==1.0.1
-tavily-python==0.5.0
-git+https://github.com/openai/swarm.git
